created edit template, action

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>this is articles demo</h2>
 <% if @article.errors.any? %>
-    <h2> the following errors prevented the article from getting created </h2>
+    <h2> the following errors prevented the article from getting  updated </h2>
     <ul>
         <% @article.errors.full_messages.each do |msg| %>
             <li> <%= msg %> </li>
