added partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>this is home page </h1>
-<%= link_to 'About', pages_about_path %>
+<%= link_to 'Alpha_blog', articles_path %> | <%= link_to 'About', pages_about_path %>
