--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,54 @@
+$navbar-default-bg: black;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo{
+    float: left;
+    color: #fff;
+    font-size: 1.7em;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+}
+.center{
+    text-align: center;
+}
+.jumbotron{
+    background-image: asset-url("new_cover_page.png");
+    background-size: 100% 100%;
+    height: 500px;
+}
+.jumbotron h1{
+    text-align: center;
+    color: #fff;
+    letter-spacing: -1px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+.btn-lg{
+    font-size: 1.7em;
+    background-color: black;
+    text-decoration: none
+}
+ .footer{
+     margin-top:10px;
+     padding-top: 5px;
+     color: #777;
+     border-top: 2px #eaeaea solid;
+ }
+ .footer a:hover{
+    color: #222;
+ }
+ .footer small{
+     float: left;
+ }
+ .footer ul{
+     float: right;
+     list-style: none;
+     padding-right: 10px;
+ }
+ .footer ul li{
+     float: left;
+     margin-left: 15px;
+ }
