--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>this is home page </h1>
-<%= link_to 'Alpha_blog', articles_path %> | <%= link_to 'About', pages_about_path %>
+<div class=" center jumbotron">
+    <h1>ALPHA BLOG </h1>
+    <%= link_to 'Sign Up Now', "#", class: "btn btn-danger btn-lg" %>
+</div>
