--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,22 +17,22 @@ $navbar-default-bg: black;
 .jumbotron{
     background-image: asset-url("new_cover_page.png");
     background-size: 100% 100%;
-    height: 500px;
+    height: 470px;
 }
 .jumbotron h1{
     text-align: center;
     color: #fff;
     letter-spacing: -1px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
-.btn-lg{
+.sign{
     font-size: 1.7em;
     background-color: black;
     text-decoration: none
 }
  .footer{
-     margin-top:10px;
+     margin-top:45px;
      padding-top: 5px;
      color: #777;
      border-top: 2px #eaeaea solid;
