--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,17 +7,30 @@
     </ul>
 
 <% end %>
-<%= form_for @article do |f| %>
-    <p>
-        <%= f.label :title %><br/>
-        <%= f.text_field :title %>
-    </p>
-    <p>
-        <%= f.label :description %><br/>
-        <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-    <%= link_to "Back to Article List", articles_path %>
-<% end %>
+<div class="row">
+    <div class="col-xs-12">
+        <%= form_for(@article, :html=>{class: "form-horizontal", role: "form"}) do |f| %>
+            <div class="form-group">
+                <%= f.label :title, class: "col-sm-2 control-label" %>
+                <div class="col-sm-8">
+                    <%= f.text_field :title, class: "form-control", placeholder: "Title about article.", autofocus: true%>
+                </div>
+            </div>
+            <div class="form-group">
+                <%= f.label :description, class: "col-sm-2 control-label"%>
+                <div class="col-sm-8">
+                    <%= f.text_area :description, rows: "10", class: "form-control", placeholder: "Enter some text here about article." %>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <%= f.submit class: "btn btn-primary btn-lg" %>
+                </div>
+            </div>
+        <% end %>
+        <div class="col-xs-4 col-xs-offset-4">
+            [ <%= link_to "Cancle request and return to article list", articles_path %> ]
+        </div>
+       
+    </div>
+</div>
