--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class=" center jumbotron">
     <h1>ALPHA BLOG </h1>
-    <%= link_to 'Sign Up Now', "#", class: "btn btn-danger btn-lg" %>
+    <%= link_to 'Sign Up Now', "#", class: "sign btn btn-danger btn-lg" %>
 </div>
