--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,22 +17,39 @@ $navbar-default-bg: black;
 .jumbotron{
     background-image: asset-url("new_cover_page.png");
     background-size: 100% 100%;
-    height: 470px;
+    height: 450px;
 }
 .jumbotron h1{
     text-align: center;
     color: #fff;
     letter-spacing: -1px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-bottom: 15px;
 }
 .sign{
     font-size: 1.7em;
     background-color: black;
     text-decoration: none
 }
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+.description {
+    margin-top: 0;
+}
+.article-title {
+    font-weight: bold;
+    font-size: 1.5em;
+}
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
  .footer{
-     margin-top:45px;
+     margin-top:35px;
      padding-top: 5px;
      color: #777;
      border-top: 2px #eaeaea solid;
