--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,6 +48,10 @@ $navbar-default-bg: black;
     padding-top: 15px;
     padding-bottom: 15px;
 }
+.article-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px
+}
  .footer{
      margin-top:35px;
      padding-top: 5px;
